# housing_price_predictor

./: host.py  housing_model.pkl  housing_scaler.pkl  housingmodel.ipynb  pyproject.toml  readme.md  requirement.txt
