[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "california-housing-predictor"
version = "0.1.0"
authors = [
  { name="Rastrabhushan Dahal", email="hritikdahal28@gmail.com" },
]
description = "A Streamlit app to predict California housing prices using Linear Regression."
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "streamlit",
    "matplotlib",
    "seaborn",
]

[project.urls]
"Homepage" = "https://github.com/11hritik11/housing_price_predictor"
"Bug Tracker" = "https://github.com/11hritik11/housing_price_predictor/issues"